# asvp

./: .gitignore  CMakeLists.txt  asvp-final.webm  asvp.spec  readme.md
debian/: changelog  control  files
snap/: snapcraft.yaml
src/: main.cpp
